syntax = "proto3";

package diffs;

option go_package = "okapi-diffs/protos";

// Diffs service method definitions
service Diffs {
  rpc Export(ExportRequest) returns (ExportResponse);
  rpc Tidy(TidyRequest) returns (TidyResponse);
  rpc TidyRemote(TidyRemoteRequest) returns (TidyRemoteResponse);
  rpc Aggregate(AggregateRequest) returns (AggregateResponse);
}

// Export io
enum ContentType {
  JSON = 0;
  HTML = 1;
  WIKITEXT = 2;
}

message ExportRequest {
  string db_name = 1;
  ContentType content_type = 2 [deprecated = true];
  int32 workers = 3;
  int32 ns = 4;
}

message ExportResponse {
  int32 total = 1;
  int32 errors = 2;
}

// Tidy io
message TidyRequest {}

message TidyResponse {
  int32 total = 1;
  int32 errors = 2;
}

// TidyRemote io
message TidyRemoteRequest {}

message TidyRemoteResponse {
  int32 total = 1;
  int32 errors = 2;
}

// Aggregate io description
message AggregateRequest {}

message AggregateResponse {
  int32 total = 1;
  int32 errors = 2;
}
